@@ -21,6 +21,7 @@ issues = 1
 :version = 1.14000001
 
 [MetaData::BuiltWith / @Author::KENTNL/MetaData::BuiltWith]
+:version = 1.004000
 show_config = 1
 show_uname = 1
 uname_args = -s -o -r -m -i
@@ -84,7 +85,7 @@ replacer = replace_with_blank
 -phase = develop
 -type = suggests
 Dist::Zilla::App::Command::bakeini = 0.001000
-Dist::Zilla::PluginBundle::Author::KENTNL = 2.022001
+Dist::Zilla::PluginBundle::Author::KENTNL = 2.022003
 
 [Prereqs::AuthorDeps / @Author::KENTNL/Prereqs::AuthorDeps]
 
@@ -102,10 +103,7 @@ default_jobs = 10
 [Author::KENTNL::RecommendFixes / @Author::KENTNL/Author::KENTNL::RecommendFixes]
 :version = 0.001001
 
-[ReadmeAnyFromPod / @Author::KENTNL/ShippedReadme]
-filename = README
-location = build
-type = text
+[Pod2Readme / @Author::KENTNL/ShippedReadme]
 
 [ReadmeAnyFromPod / @Author::KENTNL/ReadmeAnyFromPod]
 filename = README.mkdn
@@ -202,12 +200,13 @@ Dist::Zilla::Plugin::MakeMaker = 0
 Dist::Zilla::Plugin::Manifest = 0
 Dist::Zilla::Plugin::ManifestSkip = 0
 Dist::Zilla::Plugin::MetaConfig = 0
-Dist::Zilla::Plugin::MetaData::BuiltWith = 0
+Dist::Zilla::Plugin::MetaData::BuiltWith = 1.004000
 Dist::Zilla::Plugin::MetaJSON = 0
 Dist::Zilla::Plugin::MetaProvides::Package = 1.14000001
 Dist::Zilla::Plugin::MetaTests = 0
 Dist::Zilla::Plugin::MetaYAML = 0
 Dist::Zilla::Plugin::MinimumPerl = 0
+Dist::Zilla::Plugin::Pod2Readme = 0
 Dist::Zilla::Plugin::PodCoverageTests = 0
 Dist::Zilla::Plugin::PodSyntaxTests = 0
 Dist::Zilla::Plugin::PodWeaver = 0
