@@ -1,6 +1,14 @@
 This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL dependencies for all phases (configure/build/runtime/test/develop)
 
 1.004001
+ [Changed / develop recommends]
+ - Test::More 1.001009 → 1.001014
+
+ [Changed / develop suggests]
+ - Dist::Zilla::PluginBundle::Author::KENTNL 2.022001 → 2.022003
+
+ [Changed / test recommends]
+ - Test::More 1.001009 → 1.001014
 
 1.004000 2014-12-14T08:34:41Z
  [Added / configure requires]
